<resources>
    <string name="app_name">BurzaHumanosti</string>
    <string name="mobile">Mobitel:</string>
    <string name="password">Lozinka:</string>
    <string name="sign_in">PRIJAVI SE</string>
    <string name="phone_hint">+385*********</string>
    <string name="password_hint">upišite lozinku</string>
    <string name="wrongMobile">Pogrešan mobilni broj</string>
    <string name="mobileLength">Broj mobitela treba imati 13 znakova</string>
    <string name="wrongMobileStartDigits">Broj mobitela treba započinjati sa +385</string>
    <string name="mobileStartDigits">+385</string>
    <string name="txtOK">OK</string>
    <string name="failedSignIn">Pogrešan broj ili lozinka</string>
    <string name="successfulSignIn">Prijavljeni ste</string>
    <string name="insertPhoneAndPass">Morate unijeti svoj broj mobitela i lozinku</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action">Akcija</string>
    <string name="positive">Priče</string>
    <string name="terms_of_use_title">Uvjeti korištenja</string>
    <string name="terms_of_use_message">Morate se složiti s uvjetima korištenja aplikacije</string>
    <string name="successfully_added_text">Uspješno ste dali svoju ponudu. Hvala!</string>
    <string name="form">Ispuna forme</string>
    <string name="fill_all_fields_message_and_photo">Morate ispuniti sva polja i dodati sliku</string>
    <string name="fill_all_fields_message">Morate ispuniti sva polja</string>
    <string name="terms_of_use_text">Potvrđujem pod kaznenom odgovornošću da neću zloupotrijebiti aplikaciju:</string>
    <string name="offer_help_text">PONUDI POMOĆ</string>
    <string name="delivery_type">Način Dostave</string>
    <string name="condition">Stanje </string>
    <string name="description">Opis proizvoda/usluge:</string>
    <string name="name">Naziv proizvoda/usluge:</string>
    <string name="add_photo">Dodaj sliku</string>
    <string name="photo">Slika proizvoda/usluge:</string>
    <string name="subCategory">Potkategorija</string>
    <string name="category">Kategorija</string>
    <string name="btn_want_help">ZATRAŽI POMOĆ</string>
    <string name="demand_request">Predaja zahtjeva</string>
    <string name="demand_request_success">Uspješno ste predali zahtjev za pomoću</string>
    <string name="empty_credentials">Neuspjela prijava</string>
    <string name="give_success">Uspješna ponuda</string>
    <string name="heroes">Heroji</string>
    <string name="about_app">O Aplikaciji</string>
    <string name="my_history">Pronađeno</string>
    <string name="my_home">Moje</string>
    <string name="giving_help">Nudim Pomoć</string>
    <string name="searching_for_a_help">Tražim pomoć</string>
    <string name="given">Poklonjeno</string>
    <string name="receviced">Primljeno</string>
    <string name="my_offers">Moje Ponude</string>
    <string name="my_searchings">Moje Potražnje</string>
    <string name="home">Home</string>
    <string name="deleting">Brisanje</string>
    <string name="sure_to_delete">Jeste li sigurni da želite poništiti?</string>
    <string name="success_deleted">Uspješno ste poništili</string>
    <string name="yes">DA</string>
    <string name="no">NE</string>
    <string name="success">Uspjeh</string>
    <string name="success_updated">Izmijenili ste svoju ponudu</string>
</resources>