<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".GiveFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/category"
            app:startIconDrawable="@drawable/ic_category">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/subCategory"
            app:startIconDrawable="@drawable/ic_category">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTvSubCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/photo"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_add_photo" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_insert_photo" />

        <Button
            android:id="@+id/btn_add_photo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/add_photo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_create" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:inputType="text|textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_description" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:inputType="text|textMultiLine" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/condition"
            app:startIconDrawable="@drawable/ic_verified">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTvSubCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/delivery_type"
            app:startIconDrawable="@drawable/ic_delivery">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTvSubDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use_text"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_agree"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer_help_text" />

    </LinearLayout>

</ScrollView>